# vicepp

./: CMakeLists.txt  README.md  attack.cc  bitboards.cc  board.cc  br.sh  bt.sh  conanfile.txt  data.cc  defs.h  full_build.sh  full_o_build.sh  hashkeys.cc  init.cc  io.cc  makemove.cc  movegen.cc  perft.cc  validate.cc  vice.cc  vice_test.cc
